[package]
name = "ln-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.72"
axum = { version = "0.6.20", features = ["macros"] }
axum-extra = { version = "0.7.7", features = ["cookie"] }
bech32 = "0.9.1"
bip39 = { version = "2.0.0", features = ["rand_core"] }
bitcoin = "0.30.1"
cln-rpc = "0.1.3"
futures = "0.3.28"
hex = "0.4.3"
ldk-node = { git = "https://github.com/lightningdevkit/ldk-node" }
serde = "1.0.183"
serde_json = "1.0.104"
time = "0.3.25"
tokio = "1.30.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
cashu-crab = { git = "https://github.com/thesimplekid/cashu-crab"}
rand = "0.8.5"
jwt-compact = "0.7.0"
chrono = "0.4.26"
nostr = "0.22.0"
tower-http = { version = "0.4.3", features = ["cors"] }
node-manager-types = {path="./types"}
bitcoin_hashes = "0.12.0"
url = "2.4.0"
uuid = { version = "1.4.1", features = ["v4"] }
gl-client = { git = "https://github.com/Blockstream/greenlight" }
dirs = "5.0.1"

