[workspace]
resolver = "2"

members = [
    "crates/ln-rs",
    "crates/ln-rs-models",
    "crates/ln-rs-cli"
]

[workspace.metadata]
authors = ["thesimplekid"]
edition = "2021"
description = "Integration with lightning"
readme = "README.md"
repository = "https://github.com/thesimplekid/ln-rs"
license-file = "LICENSE"
keywords = ["bitcoin", "lightning"]


[workspace.dependencies]
anyhow = "1.0.71"
bitcoin = { version = "0.30.0", features = ["no-std", "serde"] }
serde = "1.0.183"
serde_json = "1.0.104"
nostr = { version = "0.22.0", default-features = false } 
lightning-invoice = { version = "0.24.0", features = ["serde"]}
jwt-compact = "0.8.0-beta.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
