[package]
name = "node-manager-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
bitcoin = { version = "0.30.0", features = ["no-std"] }
cashu-crab = { git = "https://github.com/thesimplekid/cashu-crab"}
serde = "1.0.164"
serde_json = "1.0.96"
nostr = { version = "0.22.0", default-features = false }
jwt-compact = "0.8.0-beta.1"