[package]
name = "ln-rs-cli"
version = "0.1.0"
edition = "2021"
authors = ["thesimplekid"]
license = "BSD-3-Clause"
readme = "README.md"
documentation = "https://docs.rs/crate/ln-rs"
repository = "https://github.com/thesimplekid/ln-rs"
description = "Library for integrating with lighting nodes"

[features]
default = ["greenlight"]
greenlight = ["ln-rs/greenlight"]
cln = ["ln-rs/cln"]
ldk = ["ln-rs/ldk"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
bitcoin = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = "1.30.0"
chrono = "0.4.26"
ln-rs-models = { path = "../ln-rs-models" }
ln-rs = { path = "../ln-rs" }
clap = { version = "4.4.8", features = ["derive", "env"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bip39 = { version = "2.0.0", features = ["rand_core"] }
