[package]
name = "ln-rs"
version = "0.2.0"
edition = "2021"
authors = ["thesimplekid"]
license = "BSD-3-Clause"
readme = "README.md"
documentation = "https://docs.rs/crate/ln-rs"
repository = "https://github.com/thesimplekid/ln-rs"
description = "Library for integrating with lighting nodes"

[features]
default = ["greenlight"]
greenlight = ["dep:gl-client"]
cln = ["dep:cln-rpc"]
ldk = ["dep:ldk-node"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true } 
async-trait = "0.1.72"
axum = { version = "0.6.20", features = ["macros"] }
axum-extra = { version = "0.8.0", features = ["cookie"] }
bech32 = "0.9.1"
bip39 = { version = "2.0.0", features = ["rand_core"] }
bitcoin = { workspace = true }
ldk-node = { git = "https://github.com/lightningdevkit/ldk-node", optional = true }
cln-rpc = { version = "0.1.3", optional = true }
futures = "0.3.28"
hex = "0.4.3"
serde = { workspace = true }
serde_json = { workspace = true } 
time = "0.3.25"
tokio = "1.30.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
# cashu-crab = { git = "https://github.com/thesimplekid/cashu-crab"}
rand = "0.8.5"
jwt-compact = { workspace = true }
chrono = "0.4.26"
nostr = { workspace = true }
tower-http = { version = "0.4.3", features = ["cors"] }
url = "2.4.0"
uuid = { version = "1.6.1", features = ["v4"] }
gl-client = { git = "https://github.com/Blockstream/greenlight", rev = "630b19f", optional = true }
dirs = "5.0.1"
lightning-invoice = { workspace = true }
ln-rs-models = { path = "../ln-rs-models" }
